apps/radarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
      annotations:
        homelab.dev/rollout-nonce: "2025-11-16-02"
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr@sha256:ca43905eaf2dd11425efdcfe184892e43806b1ae0a830440c825cecbc2629cfb
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library-tv
              mountPath: /media/tv
            - name: library-movies
              mountPath: /media/movies
            - name: library-anime
              mountPath: /media/anime
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              memory: 1Gi
      volumes:
        - name: library-tv
          hostPath:
            path: /mnt/gdrive/Videos/tv
            type: Directory
        - name: library-movies
          hostPath:
            path: /mnt/gdrive/Videos/movies
            type: Directory
        - name: library-anime
          hostPath:
            path: /mnt/gdrive/Videos/anime
            type: Directory
        - name: downloads
          hostPath:
            path: /downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
