apps/radarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      targetPort: 7878
